@@ -1,9 +1,9 @@
 source :gemcutter
 
-gem "activerecord", "2.3.8", :require => "active_record"
-gem "activesupport", "2.3.8"
-gem "rspec", ">= 1.3.0"
-gem "fixjour", "0.4.1"
-gem "jeweler", "1.4.0"
-gem "sqlite3-ruby", ">= 1.2.5"
+gem "activerecord", "3.0.3"
+gem "activesupport", "3.0.3"
+gem "fixjour", "0.5.3"
+gem "rspec", "2.2.0"
+gem "jeweler", "1.5.1"
+gem "sqlite3-ruby", ">= 1.3.2"
 gem 'rake'
